Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2792

(fid_seq_in_fldb(fid_seq(fid)) ) failed: [0x200000002:0x1:0x0] is insane!

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6758

      == sanity test 154: Open-by-FID == 21:42:22 (1385530942)
      stat fid [0x280002341:0x6:0x0]

      Message from syslogd@testnode at Nov 26 21:42:22 ...
      kernel:LustreError: 2347:0:(lmv_fld.c:72:lmv_fld_lookup()) ASSERTION( (fid_seq_in_fldb(fid_seq(fid)) || fid_seq_is_local_file(fid_seq(fid))) && fid_is_sane(fid) ) failed: [0x200000002:0x1:0x0] is insane!

      Message from syslogd@testnode at Nov 26 21:42:22 ...
      kernel:LustreError: 2347:0:(lmv_fld.c:72:lmv_fld_lookup()) LBUG

      It is clearly SEQ_DOT_LUSTRE(0x200000002) is not included in_fldb check, but actually we insert it into the memory fldb cache in fld_server_init.

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: